# emu

./: .gitignore  Makefile  README.md  cabal.project  emu.cabal
docs/: tutorial.md
emacs/: emu-mode.el
grammar/: example.emu  grammar
lib/: codegen.c  codegen.cc  codegen.h  debug.c  entry_point.c  lib.h  utils.c  utils.cc
src/: Main.hs
src/Interface/: Error.hs  OldError.hs  ParseArgs.hs
src/Lexer/: Lexer.hs  Token.hs
src/Misc/: Tuple.hs
src/OldLexer/: Lexer.hs  Token.hs
src/OldParser/: AST.hs  Parser.hs
src/Parser/: AST.hs  Parser.hs
src/Passes/: Inline.hs  Pure.hs
src/Semantics/: Check.hs  Error.hs  Marshal.hsc  SAST.hs
tests/c-tests/: Makefile  simple-link-test.c  test1.c  test1.emu  test2.c  test2.emu  test3.c  test3a.emu  test3b.emu  test4.c  test4.emu  test5.c  test5.emu  test6.emu
