cabal-version:      2.4
name:               emu
version:            0.1.0.0
build-type:         Simple
synopsis:           Reference compiler for the emu programming language.
bug-reports:        https://github.com/RArbore/emu/issues
license-file:       COPYING
author:             Russel Arbore
maintainer:         russel.jma@gmail.com

extra-source-files:
    README.md

executable emu
    main-is:          Main.hs
    other-modules:    Interface.ParseArgs, Interface.Error, Lexer.Lexer, Lexer.Token, Parser.Parser
    build-depends:    base, text, directory, deepseq, megaparsec
    hs-source-dirs:   src
    default-language: Haskell2010
