cabal-version:      2.4
name:               emu
version:            0.1.0.0
build-type:         Simple
synopsis:           Reference compiler for the emu programming language.
bug-reports:        https://github.com/RArbore/emu/issues
license-file:       COPYING
author:             Russel Arbore
maintainer:         russel.jma@gmail.com

extra-source-files:
    README.md

executable emu
    main-is:          Main.hs
    other-modules:    Interface.ParseArgs, Parser.Parser, Parser.AST, Semantics.Error, Semantics.SAST, Semantics.Check
    build-depends:    base, text, bytestring, containers, directory, deepseq, megaparsec, parser-combinators, mtl
    hs-source-dirs:   src
    include-dirs: ./lib
    c-sources: lib/codegen.c
    default-language: Haskell2010
